[python] Fix YALSAT_FPU and fpu_control.h requirement on platforms other than linux - fpu_control.h that is not available on various platforms (including mingw/cygwin). See: https://www.gnu.org/software/gnulib/manual/html_node/fpu_005fcontrol_002eh.html - Note: If results depend on the rounding method, and the differences are significant, it could mean that the calculations are not stable. Code for wide range of architectures is advised.

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -73,7 +73,10 @@ EXTRA_ARGS = {
                                "-Wno-unused-but-set-variable",
                                "-fvisibility=hidden"],
         "extra_link_args": ["-flto", "-O3", "-Wl,--as-needed"],
-        "define_macros": [("YALSAT_FPU", None),],
+        # YALSAT_FPU: Requires fpu_control.h that is not available
+        # on various platforms (including mingw/cygwin).
+        # See: https://www.gnu.org/software/gnulib/manual/html_node/fpu_005fcontrol_002eh.html
+        "define_macros": [("YALSAT_FPU", None)] if sys.platform == "linux2" else [],
     },
     "unix_darwin": {
         # linking to Clang"s C++ library libc++, rather than GCC"s libstdc++
